--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <meta name="keywords" content="IT Support UAE, CCTV Installation, Software Development, Web Development, Cloud Solutions, Network Setup, Cybersecurity, Server Management, UAE Services" />
   <meta name="author" content="CyBrix Technologies" />
   <meta name="theme-color" content="#222" />
-  <link rel="canonical" href="https://cybrixtech.ae/" />
+  <link rel="canonical" href="https://cybrixtech.github.io/" />
   <meta property="og:title" content="CyBrix Technologies – Trusted IT & CCTV Services UAE" />
   <meta property="og:description" content="Get expert help for your IT, Security, and Development needs. Affordable, certified, and reliable." />
-  <meta property="og:url" content="https://cybrixtech.ae/" />
+  <meta property="og:url" content="https://cybrixtech.github.io/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://cybrixtech.ae/images/og-preview.jpg" />
+  <meta property="og:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="CyBrix Technologies – Trusted IT & CCTV Services UAE" />
   <meta name="twitter:description" content="Expert IT support, surveillance systems, and development solutions. Free consultation & fast service." />
-  <meta name="twitter:image" content="https://cybrixtech.ae/images/og-preview.jpg" />
+  <meta name="twitter:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -128,7 +128,7 @@
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "CyBrix Technologies",
-  "url": "https://cybrixtech.ae",
+  "url": "https://cybrixtech.github.io",
   "address": {
     "@type": "PostalAddress",
     "addressCountry": "AE",
@@ -137,7 +137,7 @@
   "telephone": "+971503037120",
   "description": "IT support, CCTV setup & development services across UAE.",
   "areaServed": "UAE",
-  "image": "https://cybrixtech.ae/images/og-preview.jpg"
+  "image": "https://cybrixtech.github.io/images/og-preview.jpg"
   ,"openingHours": "Mo-Sa 09:00-18:00",
   "geo": {
     "@type": "GeoCoordinates",
