--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <input type="tel" name="phone" placeholder="Phone" required />
     <input type="email" name="email" placeholder="Email" required />
     <textarea name="message" placeholder="Tell us about your needs..." rows="5"></textarea>
-    <input type="hidden" name="_next" value="https://cybrixtech.ae/thank-you.html">
+    <input type="hidden" name="_next" value="https://cybrixtech.github.io/thank-you.html">
     <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
     <button type="submit">Submit Inquiry</button>
   </form>
