--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 </section>
 <section>
-  <form action="https://formsubmit.co/info@cybrixtech.ae" method="POST">
+  <form action="https://formsubmit.co/mustafaobeid01@gmail.com" method="POST">
     <h2>Request a Free Consultation</h2>
     <label>Select Service</label>
     <select name="service" required>
