--- a/thank-you.html
+++ b/thank-you.html
@@ -4,9 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thank You | CyBrix Technologies</title>
+  <meta name="description" content="Thank you for contacting CyBrix Technologies. We'll be in touch shortly!" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <style>
+    body {
+      font-family: 'Tajawal', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      flex-direction: column;
+      text-align: center;
+    }
+    h1 {
+      color: #007BFF;
+      font-size: 2em;
+    }
+    p {
+      margin-top: 10px;
+      font-size: 1.2em;
+    }
+    a.button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #007BFF;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      display: inline-block;
+    }
+    a.button:hover {
+      background: #0056b3;
+    }
+  </style>
 </head>
 <body>
   <h1>Thank You!</h1>
   <p>We've received your inquiry. Our team will contact you as soon as possible.</p>
+  <a class="button" href="https://cybrixtech.github.io/">Return to Home</a>
 </body>
 </html>
