--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
     <input type="email" name="email" placeholder="Email" required />
     <textarea name="message" placeholder="Tell us about your needs..." rows="5"></textarea>
     <input type="hidden" name="_next" value="https://cybrixtech.github.io/thank-you.html">
-    <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
+    <input type="hidden" name="_captcha" value="true">
+    <div class="g-recaptcha" data-sitekey="6LeYDpArAAAAAHfi5NxLDNfUO-fheq40crJ9gGw0"></div>
     <button type="submit">Submit Inquiry</button>
   </form>
 </section>
