--- a/index.html
+++ b/index.html
@@ -21,26 +21,35 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <style>
-    body { font-family: 'Tajawal', sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
-    header, footer { background: #222; color: #fff; padding: 1em; text-align: center; }
-    .logo { font-size: 1.6em; font-weight: bold; display: flex; align-items: center; justify-content: center; gap: 10px; }
-    section { padding: 2em 1em; max-width: 1200px; margin: auto; }
-    .row { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
-    .col { background: #fff; padding: 1.5em; border-radius: 8px; flex: 1 1 300px; max-width: 350px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); transition: transform 0.3s ease; }
-    .col:hover { transform: translateY(-5px); }
-    h2 { color: #111; font-size: 1.4em; }
-    ul { padding-left: 1.2em; }
-    form { background: #fff; padding: 2em; border-radius: 10px; box-shadow: 0 6px 16px rgba(0,0,0,0.1); }
-    input, textarea, select { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px; }
-    button { background: #007BFF; color: #fff; padding: 12px 20px; border: none; border-radius: 5px; cursor: pointer; }
-    button:hover { background: #0056b3; }
-    .whatsapp-btn { position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; padding: 14px 20px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
-    @media (max-width: 768px) {
-      .row { flex-direction: column; align-items: center; }
-      .col { max-width: 100%; }
-    }
-  </style>
+ <style>
+  body { font-family: 'Tajawal', sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
+  header, footer { background: #002147; color: #fff; padding: 1em; text-align: center; } /* Updated */
+  .logo { font-size: 1.6em; font-weight: bold; display: flex; align-items: center; justify-content: center; gap: 10px; }
+  section { padding: 2em 1em; max-width: 1200px; margin: auto; }
+  .row { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
+  .col { background: #fff; padding: 1.5em; border-radius: 8px; flex: 1 1 300px; max-width: 350px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); transition: transform 0.3s ease; }
+  .col:hover { transform: translateY(-5px); }
+  h2 { color: #111; font-size: 1.4em; }
+  ul { padding-left: 1.2em; }
+  form { background: #fff; padding: 2em; border-radius: 10px; box-shadow: 0 6px 16px rgba(0,0,0,0.1); }
+  input, textarea, select { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px; }
+  textarea { resize: none; overflow-y: auto; } /* Prevents stretch/drop outside box */
+  button { background: #007BFF; color: #fff; padding: 12px 20px; border: none; border-radius: 5px; cursor: pointer; }
+  button:hover { background: #0056b3; }
+  .whatsapp-btn { position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; padding: 14px 20px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
+  small#charCount {
+    display: block;
+    text-align: right;
+    font-size: 0.85em;
+    color: #666;
+    margin-top: -8px;
+    margin-bottom: 10px;
+  }
+  @media (max-width: 768px) {
+    .row { flex-direction: column; align-items: center; }
+    .col { max-width: 100%; }
+  }
+</style>
 </head>
 <body>
 <header>
@@ -112,7 +121,8 @@
     <input type="text" name="company" placeholder="Company (optional)" />
     <input type="tel" name="phone" placeholder="Phone" required />
     <input type="email" name="email" placeholder="Email" required />
-    <textarea name="message" placeholder="Tell us about your needs..." rows="5"></textarea>
+    <textarea name="message" placeholder="Tell us about your needs..." rows="5" maxlength="1000"></textarea>
+    <small id="charCount">0 / 1000</small>
     <input type="hidden" name="_next" value="https://cybrixtech.github.io/thank-you.html">
     <input type="hidden" name="_captcha" value="true">
     <div class="g-recaptcha" data-sitekey="6LeYDpArAAAAAHfi5NxLDNfUO-fheq40crJ9gGw0"></div>
@@ -148,6 +158,14 @@
   "priceRange": "$$"
 
 }
+</script>
+  <script>
+  const messageBox = document.getElementById("message");
+  const charCount = document.getElementById("charCount");
+
+  messageBox.addEventListener("input", () => {
+    charCount.textContent = `${messageBox.value.length} / 1000`;
+  });
 </script>
 </body>
 </html>
