--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Expert IT support, CCTV installation, and software solutions in the UAE. Fast response, certified technicians, and tailored services for homes and businesses." />
   <meta name="keywords" content="IT Support UAE, CCTV Installation, Software Development, Web Development, Cloud Solutions, Network Setup, Cybersecurity, Server Management, UAE Services" />
   <meta name="author" content="CyBrix Technologies" />
+  <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#002147" />
   <link rel="canonical" href="https://cybrixtech.github.io/" />
   <meta property="og:title" content="CyBrix Technologies – Trusted IT & CCTV Services UAE" />
@@ -124,8 +125,10 @@
     <textarea id="message" name="message" placeholder="Tell us about your needs..." rows="5" maxlength="1000"></textarea>
     <small id="charCount">0 / 1000</small>
     <input type="hidden" name="_next" value="https://cybrixtech.github.io/thank-you.html">
-    <input type="hidden" name="_captcha" value="true">
+    <input type="hidden" name="_captcha" value="false">
+    <div style="margin: 20px 0; text-align: center;">
     <div class="g-recaptcha" data-sitekey="6LeYDpArAAAAAHfi5NxLDNfUO-fheq40crJ9gGw0"></div>
+    </div>
     <button type="submit">Submit Inquiry</button>
   </form>
 </section>
@@ -158,7 +161,6 @@
   "priceRange": "$$"
 }
 </script>
-
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const messageBox = document.getElementById("message");
@@ -172,6 +174,5 @@
     });
   });
 </script>
-
 </body>
 </html>
