--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="./favicon.ico" type="image/x-icon" />
  <style>
   body { font-family: 'Tajawal', sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
   header, footer { background: #002147; color: #fff; padding: 1em; text-align: center; } /* Updated */
@@ -94,8 +94,8 @@
 <section>
   <form action="https://formsubmit.co/mustafaobeid01@gmail.com" method="POST">
     <h2>Request a Free Consultation</h2>
-    <label>Select Service</label>
-    <select name="service" required>
+   <label for="service">Select Service</label>
+   <select id="service" name="service" required>
       <optgroup label="IT Infrastructure">
         <option>IT AMC & Support</option>
         <option>VPN / Network Setup</option>
