--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
         <option>Mobile App Development</option>
       </optgroup>
     </select>
-    <input type="text" name="name" placeholder="Full Name" required />
+    <label for="name">Full Name</label>
+    <input id="name" type="text" name="name" placeholder="Full Name" required />
     <input type="text" name="company" placeholder="Company (optional)" />
     <input type="tel" name="phone" placeholder="Phone" required />
     <input type="email" name="email" placeholder="Email" required />
