--- a/thank-you.html
+++ b/thank-you.html
@@ -2,11 +2,13 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="robots" content="noindex, nofollow">
   <title>Thank You | CyBrix Technologies</title>
   <meta name="description" content="Thank you for contacting CyBrix Technologies. We'll be in touch shortly!" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+
   <style>
     body {
       font-family: 'Tajawal', sans-serif;
@@ -41,11 +43,18 @@
     a.button:hover {
       background: #0056b3;
     }
+    a.button {
+  margin: 10px 8px;
+    }
+
   </style>
 </head>
 <body>
   <h1>Thank You!</h1>
   <p>We've received your inquiry. Our team will contact you as soon as possible.</p>
+  <div style="display:flex; flex-direction:column; gap:10px; align-items:center;">
   <a class="button" href="https://cybrixtech.github.io/">Return to Home</a>
+  <a class="button" href="https://wa.me/971503037120" target="_blank">💬 Chat on WhatsApp</a>
+</div>
 </body>
 </html>
