--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
     <label for="name">Full Name</label>
     <input id="name" type="text" name="name" placeholder="Full Name" required />
     <input type="text" name="company" placeholder="Company (optional)" />
-    <input type="tel" name="phone" placeholder="Phone" required />
+   <label for="phone">Phone</label>
+   <input id="phone" type="tel" name="phone" placeholder="Phone" required />
+    <label for="email">email</label>
     <input type="email" name="email" placeholder="Email" required />
     <textarea id="message" name="message" placeholder="Tell us about your needs..." rows="5" maxlength="1000"></textarea>
     <small id="charCount">0 / 1000</small>
