--- a/index.html
+++ b/index.html
@@ -118,12 +118,23 @@
         <option>Mobile App Development</option>
       </optgroup>
     </select>
-    <input id="name" type="text" name="name" placeholder="Full Name" required />
-    <input type="text" name="company" placeholder="Company (optional)" />
-   <input id="phone" type="tel" name="phone" placeholder="Phone" required />
-   <input type="email" name="email" placeholder="Email" required />
-    <textarea id="message" name="message" placeholder="Tell us about your needs..." rows="5" maxlength="1000"></textarea>
-    <small id="charCount">0 / 1000</small>
+   <label for="name">Full Name</label>
+<input id="name" type="text" name="name" placeholder="Full Name" required />
+
+<label for="company">Company (optional)</label>
+<input id="company" type="text" name="company" placeholder="Company (optional)" />
+
+<label for="phone">Phone</label>
+<input id="phone" type="tel" name="phone" placeholder="Phone" required />
+
+<label for="email">Email</label>
+<input id="email" type="email" name="email" placeholder="Email" required />
+
+<label for="message">Your Message</label>
+<textarea id="message" name="message" placeholder="Tell us about your needs..." rows="5" maxlength="1000"></textarea>
+
+<small id="charCount">0 / 1000</small>
+
     <input type="hidden" name="_next" value="https://cybrixtech.github.io/thank-you.html">
     <input type="hidden" name="_captcha" value="false">
     <div style="margin: 20px 0; text-align: center;">
