--- a/index.html
+++ b/index.html
@@ -35,13 +35,20 @@
   form { background: #fff; padding: 2em; border-radius: 10px; box-shadow: 0 6px 16px rgba(0,0,0,0.1); }
   input, textarea, select { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px; }
   textarea { resize: none; overflow-y: auto; } /* Prevents stretch/drop outside box */
-  button { background: #002147; color: #fff; padding: 12px 20px; border: none; border-radius: 5px; cursor: pointer; 
-          transition: background 0.3s ease;
+  button {
+  background: #002147;
+  color: #fff;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer; 
+  transition: background 0.3s ease;
+}
+
 button:hover {
-  background: #00152e; /* Slightly darker for hover effect */
+  background: #00152e;
 }
-}
-  button:hover { background: #0056b3; }
+
   .whatsapp-btn { position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; padding: 14px 20px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
   small#charCount {
     display: block;
