--- a/thank-you.html
+++ b/thank-you.html
@@ -31,27 +31,33 @@
       margin-top: 10px;
       font-size: 1.2em;
     }
-   a.button {
-  margin: 10px 8px;
-  padding: 10px 20px;
-  background: #007BFF;
-  color: white;
-  text-decoration: none;
-  border-radius: 5px;
-  display: inline-block;
-}
-a.button:hover {
-  background: #0056b3;
-}
-
+    a.button {
+      margin: 10px 8px;
+      padding: 10px 20px;
+      background: #007BFF;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      display: inline-block;
+      transition: background 0.3s ease;
+    }
+    a.button:hover {
+      background: #0056b3;
+    }
+    a.button.whatsapp {
+      background: #25D366;
+    }
+    a.button.whatsapp:hover {
+      background: #1ebe5d;
+    }
   </style>
 </head>
 <body>
   <h1>Thank You!</h1>
   <p>We've received your inquiry. Our team will contact you as soon as possible.</p>
   <div style="display:flex; flex-direction:column; gap:10px; align-items:center;">
-  <a class="button" href="https://cybrixtech.github.io/">Return to Home</a>
-  <a class="button" href="https://wa.me/971503037120" target="_blank">💬 Chat on WhatsApp</a>
-</div>
+    <a class="button" href="https://cybrixtech.github.io/">Return to Home</a>
+    <a class="button whatsapp" href="https://wa.me/971503037120" target="_blank">💬 Chat on WhatsApp</a>
+  </div>
 </body>
 </html>
