--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@ button:hover {
 <input id="company" type="text" name="company" placeholder="Company (optional)" autocomplete="organization" />
 <input id="phone" type="tel" name="phone" placeholder="Phone" autocomplete="tel" required />
 <input id="email" type="email" name="email" placeholder="Email" autocomplete="email" required />
-<textarea id="message" name="message" placeholder="Tell us about your needs..." rows="5" maxlength="1000"></textarea>
-
+<textarea id="message" name="message" placeholder="Tell us about your needs..." rows="5" maxlength="1000" required></textarea>
 <small id="charCount">0 / 1000</small>
 
     <input type="hidden" name="_next" value="https://cybrixtech.github.io/thank-you.html">
