--- a/thank-you.html
+++ b/thank-you.html
@@ -55,7 +55,10 @@
   <p>We've received your inquiry. Our team will contact you as soon as possible.</p>
   <div style="display:flex; flex-direction:column; gap:10px; align-items:center;">
     <a class="button" href="https://cybrixtech.github.io/">Return to Home</a>
-    <a class="button" href="https://wa.me/971503037120" target="_blank"><span class="whatsapp-icon">💬</span> Chat on WhatsApp</a>
   </div>
 </body>
+  <footer>
+  <p>&copy; 2025 CyBrix Technologies. All rights reserved.</p>
+</footer>
+<a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank">💬 Chat on WhatsApp</a>
 </html>
