--- a/thank-you.html
+++ b/thank-you.html
@@ -48,18 +48,32 @@
       color: #25D366; /* WhatsApp green */
       font-weight: bold;
     }
+    .whatsapp-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      color: white;
+      padding: 14px 20px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
   </style>
 </head>
 <body>
   <h1>Thank You!</h1>
   <p>We've received your inquiry. Our team will contact you as soon as possible.</p>
+
   <div style="display:flex; flex-direction:column; gap:10px; align-items:center;">
     <a class="button" href="https://cybrixtech.github.io/">Return to Home</a>
   </div>
-</body>
-  <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank">💬 Chat on WhatsApp</a>
-  <footer>
-    <p>&copy; 2025 CyBrix Technologies. All rights reserved.</p
-    </footer>
 
+  <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank"><span class="whatsapp-icon">💬</span> Chat on WhatsApp</a>
+
+  <footer>
+    <p>&copy; 2025 CyBrix Technologies. All rights reserved.</p>
+  </footer>
+</body>
 </html>
