--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
   input, textarea, select { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px; }
   textarea { resize: none; overflow-y: auto; } /* Prevents stretch/drop outside box */
   button {
-  background: #002147;
+  background: #00152e;      /* dark blue */
   color: #fff;
   padding: 12px 20px;
   border: none;
   border-radius: 5px;
-  cursor: pointer; 
+  cursor: pointer;
   transition: background 0.3s ease;
 }
 
 button:hover {
-  background: #00152e;
+  background: #FFA500;      /* orange */
 }
+
 
   .whatsapp-btn { position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; padding: 14px 20px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
   small#charCount {
