--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CyBrix Technologies | IT, CCTV & Hardware Solutions UAE</title>
   <meta name="description" content="Expert IT support, CCTV installation, and software solutions in the UAE. Fast response, certified technicians, and tailored services for homes and businesses." />
-  <meta name="keywords" content="IT Support UAE, CCTV Installation, Software Development, Web Development, Cloud Solutions, Network Setup, Cybersecurity, Server Management, UAE Services" />
+  <meta name="keywords" content="IT Support UAE, CCTV Installation, Web Development, Cloud Solutions, Network Setup, Cybersecurity, Server Management, UAE Services,IT Services in dubai, PABX Solutions, IT AMC Dubai, ERP Systems, eCommerce Websites" />
   <meta name="author" content="CyBrix Technologies" />
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#002147" />
@@ -74,7 +74,6 @@ button:hover {
   <div class="row">
     <div class="col">
       <h2>🔧 IT Infrastructure</h2>
-      <ul>
         <li>Network setup & VPNs</li>
         <li>Hardware & server management</li>
         <li>Firewall & security systems</li>
@@ -114,6 +113,7 @@ button:hover {
         <option>VPN / Network Setup</option>
         <option>Data Backup & Recovery</option>
         <option>Server Virtualization</option>
+        <option>Wifi Solutions</option>
         <option>IT Equipment Procurement</option>
       </optgroup>
       <optgroup label="Security">
@@ -121,7 +121,7 @@ button:hover {
         <option>Access Control</option>
         <option>Video Analytics Integration</option>
         <option>Intrusion Detection System</option>
-        <option>Smart Home Integration</option>
+        <option>Cybersecurity Assessment</option>
       </optgroup>
       <optgroup label="Development">
         <option>Custom Web Solutions</option>
