--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="CyBrix Technologies" />
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#002147" />
+  <meta name="google-site-verification" content="8lSfPg_trP32Th9KXVlZXzO8ve406QFSB2Pkf0VehPk" />
   <link rel="canonical" href="https://cybrixtech.github.io/" />
   <meta property="og:title" content="CyBrix Technologies – Trusted IT & CCTV Services UAE" />
   <meta property="og:description" content="Get expert help for your IT, Security, and Development needs. Affordable, certified, and reliable." />
