--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CyBrix Technologies | IT, CCTV & Hardware Solutions UAE</title>
+  <title><h1>CyBrix Technologies | IT, CCTV & Hardware Solutions UAE<h1/></title>
   <meta name="description" content="Expert IT support, CCTV installation, and software solutions in the UAE. Fast response, certified technicians, and tailored services for homes and businesses." />
   <meta name="keywords" content="IT Support UAE, CCTV Installation, Web Development, Cloud Solutions, Network Setup, Cybersecurity, Server Management, UAE Services,IT Services in dubai, PABX Solutions, IT AMC Dubai, ERP Systems, eCommerce Websites" />
   <meta name="author" content="CyBrix Technologies" />
@@ -75,6 +75,7 @@ button:hover {
   <div class="row">
     <div class="col">
       <h2>🔧 IT Infrastructure</h2>
+      <ul>
         <li>Network setup & VPNs</li>
         <li>Hardware & server management</li>
         <li>Firewall & security systems</li>
