--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><h1>CyBrix Technologies | IT, CCTV & Hardware Solutions UAE<h1/></title>
+  <title>CyBrix Technologies | IT, CCTV & Hardware Solutions UAE</title>
   <meta name="description" content="Expert IT support, CCTV installation, and software solutions in the UAE. Fast response, certified technicians, and tailored services for homes and businesses." />
   <meta name="keywords" content="IT Support UAE, CCTV Installation, Web Development, Cloud Solutions, Network Setup, Cybersecurity, Server Management, UAE Services,IT Services in dubai, PABX Solutions, IT AMC Dubai, ERP Systems, eCommerce Websites" />
   <meta name="author" content="CyBrix Technologies" />
@@ -16,6 +16,7 @@
   <meta property="og:url" content="https://cybrixtech.github.io/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
+  <meta name="image" content="Preview of CyBrix Technologies services in UAE">
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="CyBrix Technologies – Trusted IT & CCTV Services UAE" />
   <meta name="twitter:description" content="Expert IT support, surveillance systems, and development solutions. Free consultation & fast service." />
@@ -68,21 +69,22 @@ button:hover {
 </head>
 <body>
 <header>
+  <h1 style="display:none;">CyBrix Technologies – IT, CCTV & Software Solutions in UAE</h1>
   <div class="logo"><i class="fas fa-network-wired"></i> CyBrix Technologies</div>
   <p>Your Trusted Partner for IT, CCTV & Software Solutions</p>
 </header>
 <section>
   <div class="row">
     <div class="col">
-      <h2>🔧 IT Infrastructure</h2>
-      <ul>
-        <li>Network setup & VPNs</li>
-        <li>Hardware & server management</li>
-        <li>Firewall & security systems</li>
-        <li>Telephone & PABX Solution</li>
-        <li>Wifi Solutions</li>
-      </ul>
-    </div>
+  <h2>🔧 IT Infrastructure</h2>
+  <ul>
+    <li>Network setup & VPNs</li>
+    <li>Hardware & server management</li>
+    <li>Firewall & security systems</li>
+    <li>Telephone & PABX Solution</li>
+    <li>Wifi Solutions</li>
+  </ul>
+</div>
     <div class="col">
       <h2>📹 CCTV & Security</h2>
       <ul>
