--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@ button:hover {
   </form>
 </section>
 <footer>
-  <p>&copy; 2025 CyBrix Technologies. All rights reserved.</p>
+  <p>&copy; 2025 <strong>CyBrix Technologies</strong> — IT, CCTV & Software Experts in UAE.</p>
+  <p>
+    🚀 New insights weekly on our <a href="blog/index.html" style="color: #FFA500; font-weight: bold;">Tech Blog</a> —
+    <em>Explore IT tips, security guides & more</em>.
+  </p>
 </footer>
 <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank">💬 Chat on WhatsApp</a>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
