--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <meta property="og:url" content="https://cybrixtech.github.io/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="CyBrix Technologies" />
   <meta name="image" content="Preview of CyBrix Technologies services in UAE">
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="CyBrix Technologies – Trusted IT & CCTV Services UAE" />
