--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@ button:hover {
     .col { max-width: 100%; }
   }
 </style>
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CyBrix Technologies",
+    "url": "https://cybrixtech.github.io/",
+    "logo": "https://cybrixtech.github.io/images/og-preview.jpg",
+    "sameAs": [
+      "https://www.facebook.com/yourpage",
+      "https://www.instagram.com/yourpage"
+    ]
+  }
+  </script>
+</head>
+
 </head>
 <body>
 <header>
