--- a/thank-you.html
+++ b/thank-you.html
@@ -6,6 +6,24 @@
   <meta name="robots" content="noindex, nofollow">
   <title>Thank You | CyBrix Technologies</title>
   <meta name="description" content="Thank you for contacting CyBrix Technologies. We'll be in touch shortly!" />
+  <link rel="canonical" href="https://cybrixtech.github.io/thank-you.html" />
+
+  <!-- Open Graph Tags (optional but useful for social shares) -->
+  <meta property="og:title" content="Thank You | CyBrix Technologies" />
+  <meta property="og:description" content="We've received your inquiry. Our team will reach out to you shortly." />
+  <meta property="og:url" content="https://cybrixtech.github.io/thank-you.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="CyBrix Technologies" />
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Thank You | CyBrix Technologies" />
+  <meta name="twitter:description" content="We've received your inquiry. Our team will reach out to you shortly." />
+  <meta name="twitter:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
+
+  <!-- Favicon & Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" />
   <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
@@ -45,7 +63,7 @@
       background: #0056b3;
     }
     .whatsapp-icon {
-      color: #25D366; /* WhatsApp green */
+      color: #25D366;
       font-weight: bold;
     }
     .whatsapp-btn {
@@ -70,7 +88,9 @@
     <a class="button" href="https://cybrixtech.github.io/">Return to Home</a>
   </div>
 
-  <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank"><span class="whatsapp-icon">💬</span> Chat on WhatsApp</a>
+  <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank">
+    <span class="whatsapp-icon">💬</span> Chat on WhatsApp
+  </a>
 
   <footer>
     <p>&copy; 2025 CyBrix Technologies. All rights reserved.</p>
