--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="twitter:image" content="https://cybrixtech.github.io/images/og-preview.jpg" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" />
-  <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="https://cybrixtech.github.io/favicon.ico" type="image/x-icon" />
  <style>
   body { font-family: 'Tajawal', sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
   header, footer { background: #002147; color: #fff; padding: 1em; text-align: center; } /* Updated */
@@ -84,7 +84,8 @@ button:hover {
 </head>
 <body>
 <header>
-  <h1 style="display:none;">CyBrix Technologies – IT, CCTV & Software Solutions in UAE</h1>
+  <h1 style="font-size: 1.5em; font-weight: 700; margin-bottom: 0.3em;">CyBrix Technologies</h1>
+<p>Your Trusted Partner for IT, CCTV & Software Solutions</p>
   <div class="logo"><i class="fas fa-network-wired"></i> CyBrix Technologies</div>
   <p>Your Trusted Partner for IT, CCTV & Software Solutions</p>
 </header>
@@ -127,8 +128,9 @@ button:hover {
     <h2>Request a Free Consultation</h2>
    <label for="service">Select Service</label>
    <select id="service" name="service" required>
-      <optgroup label="IT Infrastructure">
-        <option>IT AMC & Support</option>
+  <option value="" disabled selected>Select a service</option>
+  <optgroup label="IT Infrastructure">
+    <option>IT AMC & Support</option>
         <option>VPN / Network Setup</option>
         <option>Data Backup & Recovery</option>
         <option>Server Virtualization</option>
@@ -172,7 +174,8 @@ button:hover {
     <em>Explore IT tips, security guides & more</em>.
   </p>
 </footer>
-<a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank">💬 Chat on WhatsApp</a>
+  <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank" rel="noopener noreferrer">
+
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script type="application/ld+json">
 {
