--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@ button:hover {
 </head>
 <body>
 <header>
+  <img src="https://cybrixtech.github.io/images/og-preview.jpg" 
+     alt="CyBrix IT and CCTV services in UAE" 
+     style="max-width: 100%; border-radius: 8px; margin: 0 auto 1.5em; display: block;" />
   <h1 style="font-size: 1.5em; font-weight: 700; margin-bottom: 0.3em;">CyBrix Technologies</h1>
-<p>Your Trusted Partner for IT, CCTV & Software Solutions</p>
-  <div class="logo"><i class="fas fa-network-wired"></i> CyBrix Technologies</div>
   <p>Your Trusted Partner for IT, CCTV & Software Solutions</p>
+  <div class="logo"><i class="fas fa-network-wired"></i></div>
 </header>
 <section>
   <div class="row">
@@ -174,8 +176,9 @@ button:hover {
     <em>Explore IT tips, security guides & more</em>.
   </p>
 </footer>
-  <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank" rel="noopener noreferrer">
-
+ <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank" rel="noopener noreferrer">
+  💬 Chat on WhatsApp
+</a>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script type="application/ld+json">
 {
