--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@ button:hover {
 </head>
 <body>
 <header>
+  <img src="https://cybrixtech.github.io/images/og-preview.jpg" 
+     alt="CyBrix IT and CCTV services in UAE" 
+     style="width: 60%; max-width: 600px; border-radius: 8px; margin: 1.5em auto; display: block;" />
   <h1 style="font-size: 1.5em; font-weight: 700; margin-bottom: 0.3em;">CyBrix Technologies</h1>
   <p>Your Trusted Partner for IT, CCTV & Software Solutions</p>
   <div class="logo"><i class="fas fa-network-wired"></i></div>
