--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ button:hover {
 <body>
 <header>
   <img src="https://cybrixtech.github.io/images/og-preview.jpg" 
-     alt="CyBrix IT and CCTV services in UAE" 
+     alt="CyBrix Technologies logo and services – IT support, CCTV installation, software solutions in UAE" 
      style="width: 15%; max-width: 159px; border-radius: 8px; margin: 1.5em auto; display: block;" />
   <h1 style="font-size: 1.5em; font-weight: 300; margin-bottom: 0.3em;">CyBrix Technologies</h1>
   <p>Your Trusted Partner for IT, CCTV & Software Solutions</p>
