--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@ button:hover {
 <footer>
   <p>&copy; 2025 <strong>CyBrix Technologies</strong> — IT, CCTV & Software Experts in UAE.</p>
   <p>
-    🚀 New insights weekly on our <a href="blog/index.html" style="color: #FFA500; font-weight: bold;">Tech Blog</a> —
-    <em>Explore IT tips, security guides & more</em>.
-  </p>
+  🚀 New insights weekly on our <a href="/blog/index.html" style="font-weight: bold;">Tech Blog</a> – Explore IT tips, smart security guides, and expert tech solutions for UAE businesses.
+</p>
+
 </footer>
  <a class="whatsapp-btn" href="https://wa.me/971503037120" target="_blank" rel="noopener noreferrer">
   💬 Chat on WhatsApp
