--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   input, textarea, select { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px; }
   textarea { resize: none; overflow-y: auto; } /* Prevents stretch/drop outside box */
   button {
-  background: #00152e;      /* dark blue */
+  background: #002147;      /* dark blue */
   color: #fff;
   padding: 12px 20px;
   border: none;
