--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ button:hover {
 <footer>
   <p>&copy; 2025 <strong>CyBrix Technologies</strong> — IT, CCTV & Software Experts in UAE.</p>
   <p>
-  🚀 New insights weekly on our <a href="/blog/index.html" style="font-weight: bold;">Tech Blog</a> – Explore IT tips, smart security guides, and expert tech solutions for UAE businesses.
+  🚀 New insights weekly on our <a href="/blog/index.html" style="font-weight: bold;color: white;">Tech Blog</a> – Explore IT tips, smart security guides, and expert tech solutions for UAE businesses.
 </p>
 
 </footer>
